Wed Oct 22 18:00:00 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* test/test-unicode_normalize.rb: Importing from
	  https://github.com/duerst/eprun/blob/master/test/test_normalize.rb.
	  (removing trailing whitespace, fixing EOLs and adding EOL property)

Wed Oct 22 08:21:09 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* nacl/pepper_main.c (Instance_DidCreate): mount devfs and rebind fd 0
	  .. 2 so that stderr goes to the console of the browser.

Wed Oct 22 03:47:43 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): maximum "n" should be 16384.

Wed Oct 22 03:37:00 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): minor spell fix.

Wed Oct 22 03:33:58 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affin): optimize memory usege a
	  bit. Typical rubyist never use 8k cpus machine.

Wed Oct 22 00:01:09 2014  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* configure.in (XCFLAGS): Add include path for NaCl libraries.
	  (XLDFLAGS): ditto.
	  (NACL_LIB_PATH): new stubstitution

	* nacl/nacl-config.rb: support NACL_LIB_PATH

	* nacl/package.rb: ditto.

	* nacl/pepper_main.c: replace old implementations with nacl_io.

	* nacl/GNUmakefile.in: link nacl_io to pepper_ruby

	* ruby.c (rb_load_file): remove __attribute__((weak)) because the old
	  override hack was replaced with nacl_io.

	* file.c (rb_file_load_ok): ditto.

Tue Oct 21 17:32:32 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* common.mk: Adding explicit creation of directory
	  enc/unicode/data because git doesn't handle empty
	  directories. [patch by Masahiro Ide, filed with r48073]

Tue Oct 21 17:12:12 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* lib/unicode_normalize/tables.rb: Committing to make version
	  update easier and more predictable, and reducing compilation
	  time.

Tue Oct 21 15:56:56 2014  Martin Duerst <duerst@it.aoyama.ac.jp>
